feat: file store pagination + continuation token pagination